# projet-c-agence-de-voyage

./: function.c  main.c  project10.tar.xz  project6.tar.xz  project8.tar.xz  project9.tar.xz
bilel/offre.2/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  offre.2.glade.bak  offre.2.gladep  offre.txt
bilel/offre.2/autom4te.cache/: output.0  requests  traces.0  traces.1
bilel/offre.2/po/: Makefile  Makefile.in
bilel/offre.2/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fn.c  fn.h  interface.c  interface.c.bak  interface.h  main.c  offre  offre.c  offre.h  user.txt
bilel/offre.2/src/.deps/: callbacks.Po  fn.Po  offre.Po
